--- a/6Jo_Text_Game/6Jo_Text_Game.csproj
+++ b/6Jo_Text_Game/6Jo_Text_Game.csproj
@@ -22,4 +22,8 @@
     <Compile Remove="Warrior.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NAudio" Version="2.2.1" />
+  </ItemGroup>
+
 </Project>
